# iget

./: .gitignore  CMakeLists.txt  CMakePresets.json  License.txt  README.md  build.py  conanfile.txt  config.json  getconfig.h.in  index.html  setting.nn  vcpkg.json
src/: main.cc
src/includes/: path.hpp
tests/: main.cc
